test/Common/LinkerScriptParsing/Errors/Assignments/MissingWhitespace/Inputs/script2.t
ADDITIONAL_INPUT4 =0x600df00d;
